Fix scroll padding so focus isn't behind header

--- a/frontend/styles/root.scss
+++ b/frontend/styles/root.scss
@@ -11,6 +11,8 @@ html {
     overflow-x: hidden;
     overflow-y: scroll;
 
+    scroll-padding-block-start: $headerHeight;
+
     font: 16px $font-stack;
 }
 
